--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>TinDog</title>
+  <title>TeenDog</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,900|Ubuntu&display=swap" rel="stylesheet">
@@ -49,7 +49,7 @@
       <!-- Title -->
       <div class="row">
         <div class="col-lg-6">
-          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting puppies nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>Download</button>
         </div>
@@ -80,7 +80,7 @@
         <div class="feature-box col-lg-4">
           <i class="icon fas fa-heart fa-3x"></i>
           <h3 class="feature-title">Guaranteed to work</h3>
-          <p class="feature-par">Find the love of your dog's life or your money back.</p>
+          <p class="feature-par">Find the best friend for your pup or your money back.</p>
         </div>
       </div>
     </div>
@@ -94,12 +94,12 @@
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
-          <h2 class="testimonials-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <h2 class="testimonials-text">I no longer have to run around for friendship. I've found the best Shiba on TeennDog. Woof.</h2>
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item container-fluid">
-          <h2 class="testimonials-text">My dog used to be so lonely, but with Tindog's help, they've found the love of their lives. I think.</h2>
+          <h2 class="testimonials-text">My dog used to be very shy, but with Teenndog's help, he found the funniest puppy to play with.</h2>
           <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
         </div>
@@ -136,7 +136,7 @@
 
   <section class="white-section" id="pricing">
 
-    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Pup's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
     <div class="row">
       <div class="pricing-column col-lg-4 col-md-6">
@@ -193,7 +193,7 @@
 
   <section class="colored-section" id="cta">
     <div class="container-fluid">
-      <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <h3 class="big-heading">Help your Dog find a True Friend for Life Today.</h3>
       <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>Download</button>
       <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>Download</button>
     </div>
