--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item container-fluid">
-          <h2 class="testimonials-text">My dog used to be very shy, but with Teenndog's help, he found the funniest puppy to play with.</h2>
+          <h2 class="testimonials-text">My dog used to be very shy, but with Teendog's help, he found the funniest puppy to play with.</h2>
           <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
         </div>
