--- a/index.html
+++ b/index.html
@@ -4,33 +4,24 @@
 <head>
   <meta charset="utf-8">
   <title>TeenDog</title>
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,900|Ubuntu&display=swap" rel="stylesheet">
-
   <!-- Bootstrap css -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-
   <!-- Custom css -->
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-
   <section class="colored-section" id="title">
     <div class="container-fluid">
-
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
-
         <a class="navbar-brand" href="">tindog</a>
-
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
           <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link" href="#footer">Contact</a>
@@ -42,10 +33,8 @@
               <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
-
         </div>
       </nav>
-
       <!-- Title -->
       <div class="row">
         <div class="col-lg-6">
@@ -57,13 +46,9 @@
           <img class="transform-img title-image" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
-
     </div>
   </section>
-
-
   <!-- Features -->
-
   <section class="white-section" id="features">
     <div class="container-fluid">
       <div class="row">
@@ -85,16 +70,12 @@
       </div>
     </div>
   </section>
-
-
   <!-- Testimonials -->
-
   <section class="colored-section" id="testimonials">
-
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
-          <h2 class="testimonials-text">I no longer have to run around for friendship. I've found the best Shiba on TeennDog. Woof.</h2>
+          <h2 class="testimonials-text">I no longer have to run around for friendship. I've found the best Shiba on TeenDog. Woof.</h2>
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
@@ -113,29 +94,16 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
-
   </section>
-
-
   <!-- Press -->
-
   <section class="colored-section" id="press">
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
-
   </section>
-
-
   <!-- Pricing -->
-
   <section class="white-section" id="pricing">
-
     <h2 class="section-heading">A Plan for Every Pup's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
     <div class="row">
@@ -153,7 +121,6 @@
           </div>
         </div>
       </div>
-
       <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
@@ -168,7 +135,6 @@
           </div>
         </div>
       </div>
-
       <div class="pricing-column col-lg-4">
         <div class="card">
           <div class="card-header">
@@ -184,13 +150,9 @@
           </div>
         </div>
       </div>
-
     </div>
   </section>
-
-
   <!-- Call to Action -->
-
   <section class="colored-section" id="cta">
     <div class="container-fluid">
       <h3 class="big-heading">Help your Dog find a True Friend for Life Today.</h3>
@@ -198,10 +160,7 @@
       <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>Download</button>
     </div>
   </section>
-
-
   <!-- Footer -->
-
   <footer class="white-section" id="footer">
     <div class="container-fluid">
       <i class="fab fa-twitter social-icon"></i>
@@ -211,10 +170,8 @@
       <p>© Copyright 2020 TinDog</p>
     </div>
   </footer>
-
   <!-- Font Awesome Script -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-
   <!-- Bootstrap Scripts -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
